# transfer-rs

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/: cliff.toml
.github/instructions/: conventional-commits.instructions.md  release-notes.instructions.md
.github/workflows/: ci.yml  prepare-release-pr.yml  release.yml  tag-release-pr.yml
release-notes/: v1.0.1.md  v1.1.0.md
scripts/: generate_usage_video.py  release.sh
src/: lib.rs  main.rs  model.rs
src/cli/: mod.rs
src/client/: crypto.rs  mod.rs  transfer.rs
src/commands/: delete.rs  download.rs  history.rs  mod.rs  upload.rs
src/storage/: config.rs  db.rs  mod.rs  paths.rs
src/tui/: history.rs
tests/: integration_cli.rs
