[package]
name = "transfer-rs"
version = "1.0.1"
edition = "2024"
description = "CLI client for transfer.sh-compatible instances with local history and optional age encryption"
license = "MIT"
readme = "README.md"

[dependencies]
age = "0.11"
anyhow = "1.0"
arboard = "3.6"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.28"
directories = "5.0"
futures-util = "0.3"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
rpassword = "7.3"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.15"
tokio = { version = "1.43", features = ["fs", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
url = "2.5"
uuid = { version = "1.12", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2.0"
mockito = "1.7"
portable-pty = "0.9"
predicates = "3.1"
serde_json = "1.0"
serial_test = "3.2"
